apps/talos/jellyfin/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    spec:
      containers:
      - name: jellyfin
        resources:
          limits:
            gpu.intel.com/i915: 1000m
        volumeMounts:
        - mountPath: /data
          name: media
          readOnly: True
        - mountPath: /config
          name: config
        - mountPath: /config-new
          name: config-new
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin
      - name: config-new
        persistentVolumeClaim:
          claimName: jellyfin-config
