apps/talos/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: saga
  tailscale.com/tags: "tag:k8s,tag:internal"
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
